RESOLVED FIXED 276332
WebCodecs Audio and Video Encoder callbacks leak the Document object.
https://bugs.webkit.org/show_bug.cgi?id=276332
Summary WebCodecs Audio and Video Encoder callbacks leak the Document object.
Ryan Reno
Reported 2024-07-08 13:11:17 PDT
Like the Decoder counterparts, the WebCodecs encoders store refs to Strong callbacks which leak the Document.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-08 13:11:31 PDT
Ryan Reno
Comment 2 2024-07-08 13:14:19 PDT
EWS
Comment 3 2024-07-08 21:26:59 PDT
Committed 280762@main (a0a1e48bd8e0): <https://commits.webkit.org/280762@main> Reviewed commits have been landed. Closing PR #30574 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.