WebCodecs Audio and Video Encoder callbacks leak the Document object. https://bugs.webkit.org/show_bug.cgi?id=276332 rdar://131327288

Reviewed by Ryosuke Niwa.

Similar to the Audio and Video Decoder objects WebCodecs encoders store
refs to their Strong callbacks which leak the Document. This change
makes the output callbacks of the encoders Weak and keeps them alive via
the owning encoder wrappers visitAdditionalChildren.

* LayoutTests/http/tests/webcodecs/audio-encoder-callbacks-do-not-leak-expected.txt: Added.
* LayoutTests/http/tests/webcodecs/audio-encoder-callbacks-do-not-leak.html: Added.
* LayoutTests/http/tests/webcodecs/resources/audio-encoder-callbacks-frame.html: Added.
* LayoutTests/http/tests/webcodecs/resources/video-encoder-callbacks-frame.html: Added.
* LayoutTests/http/tests/webcodecs/video-encoder-callbacks-do-not-leak-expected.txt: Added.
* LayoutTests/http/tests/webcodecs/video-encoder-callbacks-do-not-leak.html: Added.
* Source/WebCore/Modules/webcodecs/WebCodecsAudioEncoder.h:
(WebCore::WebCodecsAudioEncoder::outputCallbackConcurrently):
(WebCore::WebCodecsAudioEncoder::errorCallbackConcurrently):
* Source/WebCore/Modules/webcodecs/WebCodecsAudioEncoder.idl:
* Source/WebCore/Modules/webcodecs/WebCodecsEncodedAudioChunkOutputCallback.h:
* Source/WebCore/Modules/webcodecs/WebCodecsEncodedAudioChunkOutputCallback.idl:
* Source/WebCore/Modules/webcodecs/WebCodecsEncodedVideoChunkOutputCallback.h:
* Source/WebCore/Modules/webcodecs/WebCodecsEncodedVideoChunkOutputCallback.idl:
* Source/WebCore/Modules/webcodecs/WebCodecsVideoEncoder.h:
(WebCore::WebCodecsVideoEncoder::outputCallbackConcurrently):
(WebCore::WebCodecsVideoEncoder::errorCallbackConcurrently):
* Source/WebCore/Modules/webcodecs/WebCodecsVideoEncoder.idl:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/bindings/js/JSWebCodecsAudioEncoderCustom.cpp: Added.
(WebCore::JSWebCodecsAudioEncoder::visitAdditionalChildren):
* Source/WebCore/bindings/js/JSWebCodecsVideoEncoderCustom.cpp: Added.
(WebCore::JSWebCodecsVideoEncoder::visitAdditionalChildren):

Canonical link: https://commits.webkit.org/280762@main